# ozzy-trading-bot

./: .coverage  .gitignore  24_7_TRADING_ACTIVE.md  =2.2.2  AB_TEST_INTEGRATION_COMPLETE.md  AB_TEST_QUICK_REF.md  AGENTS.md  AI_LEARNING_INSIGHTS.md  ALL_FIXES_COMPLETE.md  AMBITIOUS_AI_UPGRADE.md  ANALYSIS_SUMMARY.txt  APPLY_FIXES_NOW.md  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  BUG_FIX_POSITION_CLOSING.md  CLAUDE.md  COMPLETE_PROGRESS_REPORT.md  CONTEXT_ENGINE_COMPLETE.md  CONTEXT_SYSTEM_COMPLETE.md  COPILOT_PROMPT.md  CURRENT_STATUS_SNAPSHOT.md  DASHBOARD_COMMANDS.txt  DASHBOARD_GUIDE.md  DASHBOARD_TICKER_ADDED.txt  DAY_1_PROGRESS.md  DAY_3_4_COMPLETE.md  DAY_3_PROGRESS.md  DEEP_SYSTEM_SCAN.md  DEMO_README.md  DEPLOYMENT_GUIDE.md  DUAL_TIMEFRAME_SETUP.md  END_OF_DAY_SUMMARY.md  ENVIRONMENT_AUDIT.md  EVOLUTION_MASTERPLAN.md  FINAL_STATUS_REPORT.md  FIXES_APPLIED.txt  FIXES_TO_APPLY.md  FIX_IMPLEMENTED.md  FIX_SUCCESS_SUMMARY.md  FRESH_TEST_PLAN.md  (+227 more)
agent/: improvements.py  pattern_builder.py  portfolio.py  safety.py  trader.py  utils.py
config/: dynamic_config_live_micro.json  dynamic_config_testnet.json  exchange.json  live.yaml  openclaw_manifest.json  protection_rules.json  risk.json  symbols.json
core/: binance_live_check.py  binance_testnet_check.py  hermes_diagnostic.py  hl_executor.py  hl_lifecycle_test.py  macro_scout.py  market_sniper.py  openclaw_breakout_executor.py  permission_probe.py  protection_manager.py  telegram_reporter.py  trend_executor.py
dashboard/: __init__.py  cli_monitor.py  live_status_dashboard_server.py
data/: ozzy_simple.db  (+3 more)
(+376 files in other folders)
