[project]
name = "hermes-trading-bot"
version = "2.0.0"
description = "Autonomous trading bot — TradingView webhooks to MetaAPI/Binance"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "PTH", "PL", "PERF", "RUF"
]
ignore = [
    "D100", "D104", "D203", "D212", "PLR2004", "PLW0603"
]

# CRITICAL for trading bots: catch silent failures
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "datetime.datetime.now",
    "datetime.datetime.utcnow",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004"]
"backtest_*.py" = ["PLR2004"]
